Fix drop overlay on firefox

--- a/src/components/DropContainer/styles.css
+++ b/src/components/DropContainer/styles.css
@@ -1,11 +1,6 @@
 .drop-container {
     position: relative;
 
-    &.dragged-over {
-        outline: var(--dui-width-separator-thin) dashed var(--dui-color-separator);
-        outline-offset: calc(-1 * var(--dui-spacing-medium));
-    }
-
     .drop-overlay {
         display: flex;
         position: absolute;
@@ -13,8 +8,23 @@
         left: 0;
         align-items: center;
         justify-content: center;
+        visibility: hidden;
         background-color: var(--dui-color-backdrop);
         width: 100%;
         height: 100%;
+        pointer-events: none;
+
+        .drop-overlay-icon {
+            font-size: var(--dui-font-size-super-large);
+        }
+    }
+
+    &.dragged-over {
+        outline: var(--dui-width-separator-thin) dashed var(--dui-color-separator);
+        outline-offset: calc(-1 * var(--dui-spacing-medium));
+
+        .drop-overlay {
+            visibility: visible;
+        }
     }
 }
